fixed: raw input has stretched too wide

--- a/www/pgm2/flexstyle.css
+++ b/www/pgm2/flexstyle.css
@@ -897,6 +897,6 @@ div#svgmarker { position: absolute!important;}
 /* hide scrollbars */
 :not(#content)::-webkit-scrollbar {width: 0;}
 
-.CodeMirror { width: unset!important; min-height: 100%;}
+.CodeMirror { min-height: 100%; }
 .CodeMirror-scroll { padding-bottom: 0!important; }
-#FW_mainTextInput > textarea[style*="none"] { display: inline-block!important; visibility: hidden!important; height: 0}
+#FW_mainTextInput > textarea[style*="none"] { width:0!important; display: inline-block!important; visibility: hidden!important; height: 0}
